read table naver site

--- a/SotckPrototype.ipynb
+++ b/SotckPrototype.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "id": "fcf7bfb7",
    "metadata": {},
    "outputs": [],
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "id": "ee67eeb3",
    "metadata": {},
    "outputs": [],
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 135,
    "id": "0ac441d4",
    "metadata": {},
    "outputs": [],
@@ -43,12 +43,14 @@
     "from matplotlib import font_manager\n",
     "import requests\n",
     "from openpyxl import Workbook\n",
-    "from io import BytesIO"
+    "from io import BytesIO\n",
+    "from bs4 import BeautifulSoup\n",
+    "import re"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 136,
    "id": "61d5ef51",
    "metadata": {},
    "outputs": [],
@@ -61,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 175,
    "id": "730ffe89",
    "metadata": {},
    "outputs": [
@@ -84,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 176,
    "id": "325e2509",
    "metadata": {},
    "outputs": [],
@@ -97,8 +99,155 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 177,
+   "id": "46064289",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "myPage = 1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 178,
+   "id": "c0901a29",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "url = f\"https://finance.naver.com/item/frgn.naver?code={code}&page={myPage}\"\n",
+    "res = requests.get(url, headers=custom_headers)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 179,
+   "id": "81b6316f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "soup = BeautifulSoup(res.text,\"lxml\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 180,
+   "id": "99b8809a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "table = soup.find(\"table\", attrs={ \"class\" : \"type2\", \"summary\":})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 181,
+   "id": "06071e30",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<table cellspacing=\"0\" class=\"type2\" summary=\"거래원정보에 관한표이며 일자별 누적 정보를 제공합니다.\">\n",
+       "<caption>거래원정보</caption>\n",
+       "<tbody><tr>\n",
+       "<th>매도상위</th>\n",
+       "<th>거래량</th>\n",
+       "<th>매수상위</th>\n",
+       "<th>거래량</th>\n",
+       "</tr>\n",
+       "<tr>\n",
+       "</tr><tr><td colspan=\"4\" height=\"1\"></td></tr>\n",
+       "<tr>\n",
+       "<td class=\"bg01\" colspan=\"2\" height=\"4\"></td>\n",
+       "<td class=\"bg02\" colspan=\"2\"></td>\n",
+       "</tr>\n",
+       "<tr>\n",
+       "<td class=\"title bg01\"><span class=\"\">키움증권</span></td>\n",
+       "<td class=\"num bg01\"><span class=\"tah p11\">144,231</span></td>\n",
+       "<td class=\"title bg02\"><span class=\"red01\">UBS</span></td>\n",
+       "<td class=\"num bg02\"><span class=\"tah p11 red01\">143,214</span></td>\n",
+       "</tr>\n",
+       "<tr>\n",
+       "<td class=\"title bg01\"><span class=\"nv01\">골드만</span></td>\n",
+       "<td class=\"num bg01\"><span class=\"tah p11 nv01\">92,337</span></td>\n",
+       "<td class=\"title bg02\"><span class=\"red01\">에스지</span></td>\n",
+       "<td class=\"num bg02\"><span class=\"tah p11 red01\">100,000</span></td>\n",
+       "</tr>\n",
+       "<tr>\n",
+       "<td class=\"title bg01\"><span class=\"\">미래에셋증권</span></td>\n",
+       "<td class=\"num bg01\"><span class=\"tah p11\">81,086</span></td>\n",
+       "<td class=\"title bg02\"><span class=\"red01\">씨티그룹</span></td>\n",
+       "<td class=\"num bg02\"><span class=\"tah p11 red01\">99,291</span></td>\n",
+       "</tr>\n",
+       "<tr>\n",
+       "<td class=\"title bg01\"><span class=\"\">삼성</span></td>\n",
+       "<td class=\"num bg01\"><span class=\"tah p11\">72,308</span></td>\n",
+       "<td class=\"title bg02\"><span class=\"\">키움증권</span></td>\n",
+       "<td class=\"num bg02\"><span class=\"tah p11\">85,696</span></td>\n",
+       "</tr>\n",
+       "<tr>\n",
+       "<td class=\"title bg01\"><span class=\"nv01\">모건스탠리</span></td>\n",
+       "<td class=\"num bg01\"><span class=\"tah p11 nv01\">69,348</span></td>\n",
+       "<td class=\"title bg02\"><span class=\"\">미래에셋증권</span></td>\n",
+       "<td class=\"num bg02\"><span class=\"tah p11\">64,095</span></td>\n",
+       "</tr>\n",
+       "<tr>\n",
+       "<td class=\"bg01\" colspan=\"2\" height=\"4\"></td>\n",
+       "<td class=\"bg02\" colspan=\"2\"></td>\n",
+       "</tr>\n",
+       "<tr><td bgcolor=\"#E1E1E1\" colspan=\"4\" height=\"1\"></td></tr>\n",
+       "<tr class=\"total\">\n",
+       "<td class=\"title bg01\" height=\"40\"><span>외국계추정합</span></td>\n",
+       "<td class=\"num bg01\">\n",
+       "<span class=\"tah p11 nv01\">197,565</span>\n",
+       "</td>\n",
+       "<td class=\"num3 bg02\">\n",
+       "<span class=\"tah p11 red01\">178,144</span>\n",
+       "</td>\n",
+       "<td class=\"num bg02\">\n",
+       "<span class=\"tah p11 red01\">375,709</span>\n",
+       "</td>\n",
+       "</tr>\n",
+       "<tr><td colspan=\"4\" height=\"1\"></td></tr>\n",
+       "</tbody></table>"
+      ]
+     },
+     "execution_count": 181,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "table"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 182,
+   "id": "7192f610",
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'https://finance.naver.com/item/frgn.naver?code=323410&page=1'"
+      ]
+     },
+     "execution_count": 182,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "url"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "28ff6130",
+   "id": "e7e09711",
    "metadata": {},
    "outputs": [],
    "source": []
