--- a/SotckPrototype.ipynb
+++ b/SotckPrototype.ipynb
@@ -788,12 +788,12 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "id": "763487a4",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "chan test"
+   ]
   }
  ],
  "metadata": {
